fix, line break in text

--- a/source/scss/modules/_components.scss
+++ b/source/scss/modules/_components.scss
@@ -442,6 +442,7 @@
             color: $color-blue;
             font-size: 28px;
             margin-top: 15px;
+            max-width: 83%;
         }
     }
 
